--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+WebGL Builds
+connectwebgl.zip
+webgl_sharing
 .DS_Store
 # This .gitignore file should be placed at the root of your Unity project directory
 #
